--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -183,4 +183,54 @@
                 tools:layout_conversion_absoluteWidth="130dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/btn_hiragana"
+        android:layout_width="0dp"
+        android:layout_height="125dp"
+        android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:elevation="16dp"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/lava"
+        app:cardCornerRadius="14dp"
+        app:cardElevation="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_jpn_ind"
+        app:layout_constraintStart_toStartOf="@+id/btn_jpn_ind"
+        app:layout_constraintTop_toBottomOf="@+id/btn_jpn_ind"
+        tools:layout_conversion_absoluteHeight="120dp"
+        tools:layout_conversion_absoluteWidth="370dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/txtHiragana"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Huruf Hiragana"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_conversion_absoluteHeight="24dp"
+                tools:layout_conversion_absoluteWidth="35dp" />
+
+            <ImageView
+                android:id="@+id/gbr_hiragana"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/gb_iconhiragana"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:layout_conversion_absoluteHeight="90dp"
+                tools:layout_conversion_absoluteWidth="130dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
