--- a/app/src/main/res/layout/activity_ind_to_jpn.xml
+++ b/app/src/main/res/layout/activity_ind_to_jpn.xml
@@ -96,5 +96,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:listitem="@layout/item_list" />
+        tools:listitem="@layout/ind_to_jpn_item_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
