--- a/app/src/main/res/layout/activity_jpn_to_ind.xml
+++ b/app/src/main/res/layout/activity_jpn_to_ind.xml
@@ -97,5 +97,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:listitem="@layout/item_list" />
+        tools:listitem="@layout/jpn_to_ind_item_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
