--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/parent_layout"
-    >
+    android:id="@+id/parent_layout" >
 
     <TextView
         android:id="@+id/dashboardTitle"
@@ -29,7 +28,7 @@
         android:layout_marginEnd="16dp"
         android:elevation="8dp"
         android:focusable="true"
-        app:cardBackgroundColor="@color/indian_red"
+        app:cardBackgroundColor="@color/blue_sky"
         app:cardCornerRadius="4dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
