--- a/app/src/main/res/layout/ind_to_jpn_item_list.xml
+++ b/app/src/main/res/layout/ind_to_jpn_item_list.xml
@@ -33,10 +33,12 @@
             android:id="@+id/div_hor"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:background="?android:attr/listDivider"
-            app:layout_constraintEnd_toEndOf="@+id/tv_word"
-            app:layout_constraintStart_toStartOf="@+id/tv_word"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_word" />
 
         <TextView
