--- a/app/src/main/res/layout/jpn_to_ind_item_list.xml
+++ b/app/src/main/res/layout/jpn_to_ind_item_list.xml
@@ -15,7 +15,7 @@
         android:padding="5dp">
 
         <TextView
-            android:id="@+id/tv_translate"
+            android:id="@+id/tv_word"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -33,10 +33,10 @@
             android:layout_width="1dp"
             android:layout_height="30dp"
             android:background="?android:attr/listDivider"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_translate"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_word"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_translate" />
+            app:layout_constraintTop_toTopOf="@+id/tv_word" />
 
         <TextView
             android:id="@+id/tv_description"
@@ -45,25 +45,26 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_translate"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_word"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/div_ver"
-            app:layout_constraintTop_toTopOf="@+id/tv_translate"
+            app:layout_constraintTop_toTopOf="@+id/tv_word"
             tools:text="(Object)" />
 
         <View
-            android:id="@+id/divider3"
+            android:id="@+id/div_hor"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tv_translate"
-            app:layout_constraintTop_toBottomOf="@+id/tv_translate" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/div_ver" />
 
         <TextView
-            android:id="@+id/tv_word"
+            android:id="@+id/tv_translate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -72,10 +73,10 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/divider3"
+            app:layout_constraintEnd_toEndOf="@+id/div_hor"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider3"
+            app:layout_constraintTop_toBottomOf="@+id/div_hor"
             tools:text="Saya" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
