--- a/app/src/main/res/layout/activity_hiragana.xml
+++ b/app/src/main/res/layout/activity_hiragana.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.HiraganaActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/blue_sky">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
