--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -16,7 +16,7 @@
         android:id="@+id/item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/lava">
+        android:background="@color/white">
 
         <ImageView
             android:id="@+id/img_poster"
@@ -32,12 +32,12 @@
 
         <TextView
             android:id="@+id/img_keterangan"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:fontFamily="@font/chicle"
             tools:text="A"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/blue_sky"
             android:textSize="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
