--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -184,7 +184,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/btn_hiragana"
+        android:id="@+id/btn_huruf_jepang"
         android:layout_width="0dp"
         android:layout_height="125dp"
         android:layout_marginTop="16dp"
