--- a/app/src/main/res/layout/fragment_hiragana_a.xml
+++ b/app/src/main/res/layout/fragment_hiragana_a.xml
@@ -17,9 +17,10 @@
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
-       tools:listitem="@layout/item_row"
-       />
+       app:layout_constraintVertical_bias="0.0"
+       tools:listitem="@layout/item_row" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
